--- a/client/views/default/app/test.html
+++ b/client/views/default/app/test.html
@@ -11,8 +11,8 @@
     <ion-content data-comp-id="ionic-content.1">
         <div class=" card" data-comp-id="div.1" ng-repeat="item in data.IssuesList">
             <div class="row" data-comp-id="row.1">
-                <div class="col" data-comp-id="column.1">
-                    <div data-comp-id="text.1" ng-bind="item.id">Id</div>
+                <div class="col col-25" data-comp-id="column.1">
+                    <div data-comp-id="text.1" ng-bind="item.id" style="font-weight: bold;">Id</div>
                 </div>
                 <div class="col" data-comp-id="column.2">
                     <div data-comp-id="text.2" ng-bind="item.severity">Severity</div>
